--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,3 +1,7 @@
+*,*::before,*::after{
+    box-sizing: border-box;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", 
                 "Microsoft JhengHei", Roboto, "Helvetica Neue", 
